<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:background="@color/dark_orange"
        app:layout_constraintVertical_bias="0.033">

    </org.osmdroid.views.MapView>

    <Button
        android:id="@+id/viewHotspotsButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/view_hotspots"
        android:elevation="10dp"
        android:backgroundTint="#0CBED4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.188" />

    <EditText
        android:id="@+id/editTextTextNumber"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:elevation="10dp"
        android:inputType="phone"
        android:minHeight="48dp"
        android:background="@drawable/settings_body"
        android:padding="15dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/buttonRouting"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0CBED4"
        android:elevation="10dp"
        android:text="@string/route"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHotspotsButton"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/sendLocationButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0CBED4"
        android:elevation="10dp"
        android:text="@string/send_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toEndOf="@+id/buttonRouting"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNumber"
        app:layout_constraintVertical_bias="0.283" />


</androidx.constraintlayout.widget.ConstraintLayout>