<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:background="@drawable/settings_header"
        android:elevation="10dp">

        <TextView
            android:id="@+id/settingsTextViewTitleThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:gravity="center"
            android:letterSpacing="0.5"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="#F6F4F4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:elevation="10dp"
        android:background="@drawable/settings_body">

        <TextView
            android:id="@+id/textViewUnits"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/unit_of_measurement"
            android:textAlignment="center"
            android:textColor="#F6F4F4"
            android:elevation="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:letterSpacing="0.5"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewKilometers"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/km"
                android:textAlignment="center"
                android:textColor="#F6F4F4"
                android:elevation="10dp"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/units_background"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.5"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/textViewMiles"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/miles"
                android:textAlignment="center"
                android:textColor="#F6F4F4"
                android:elevation="10dp"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/units_background_unselected"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.5"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:orientation="vertical"
        android:elevation="10dp"
        android:background="@drawable/settings_body">

        <TextView
            android:id="@+id/textViewMaxDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_distance"
            android:textAlignment="center"
            android:textColor="#F6F4F4"
            android:elevation="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:letterSpacing="0.5"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textViewMaxDistanceLabel"
                android:layout_width="200dp"
                android:layout_height="94dp"
                android:text="@string/current_distance_filter"
                android:textAlignment="center"
                android:textColor="#F6F4F4"
                android:elevation="10dp"
                android:padding="10dp"
                android:foregroundGravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/distance_label_bg"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/editTextMaxDistanceVal"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:textAlignment="center"
                android:textColor="#F6F4F4"
                android:elevation="10dp"
                android:padding="10dp"
                android:textIsSelectable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/distance_bg"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:letterSpacing="0.2"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>

        <Button
            android:id="@+id/buttonSubmitDistanceChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:backgroundTint="#0CBED4"
            android:padding="15dp"
            android:textAlignment="center"
            android:text="@string/submit_changes" />



    </LinearLayout>

    <Button

        android:id="@+id/returnBtn"
        android:layout_width="222dp"
        android:layout_height="65dp"
        android:backgroundTint="#0CBED4"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Return to Home Page"
        android:textColor="@color/white"/>/>

</LinearLayout>